laborations/lab1/test/bad/bad080.cc
int foo(const (4));
